# quad

./: .gitignore  .gitmodules  README.md  workspace.code-workspace
3dparts/: README.md
3dparts/droneframe_v1/: droneframe_pcb_clamp.step
3dparts/teststand_pitch/: 11cm_spacer.FCStd  11cm_spacer.FCStd1  32cm_spacer_pair.FCStd  32cm_spacer_pair.FCStd1  swivel_point.FCStd  swivel_point.FCStd1  swivel_point_32cm.FCStd  swivel_point_32cm.FCStd1
3dparts/teststand_thrust/: thrust_mount.FCStd
docs/: README.md  autonomous_drones.md  determining_moment_of_inertia.md  determining_thrust_time_constant.md  equations_of_motion_pitch.md  firmware_architechture.md  modelling_of_drone.md  motor_model_gain.md  telemetry_formats.md
hardware/: README.md
hardware/flight_controller_v1/main_pcb/: fp-info-cache  main_pcb-B_Cu.gbr  main_pcb-B_Mask.gbr  main_pcb-B_Paste.gbr  main_pcb-B_Silkscreen.gbr  main_pcb-Edge_Cuts.gbr  main_pcb-F_Cu.gbr  main_pcb-F_Mask.gbr  main_pcb-F_Paste.gbr  main_pcb-F_Silkscreen.gbr  main_pcb-NPTH-drl_map.ps  main_pcb-NPTH.drl  main_pcb-PTH-drl_map.ps  main_pcb-PTH.drl  main_pcb-job.gbrjob  main_pcb.kicad_pcb  main_pcb.kicad_prl  main_pcb.kicad_pro  main_pcb.kicad_sch  main_pcb.kicad_sch-bak  main_pcb_v1.kicad_pcb  main_pcb_v1.kicad_prl  main_pcb_v1.kicad_pro
hardware/flight_controller_v1/production_files/: main_pcb-B_Cu.gbr  main_pcb-B_Mask.gbr  main_pcb-B_Paste.gbr  main_pcb-B_Silkscreen.gbr  main_pcb-Edge_Cuts.gbr  main_pcb-F_Cu.gbr  main_pcb-F_Mask.gbr  main_pcb-F_Paste.gbr  main_pcb-F_Silkscreen.gbr  main_pcb-NPTH-drl_map.gbr  main_pcb-NPTH.drl  main_pcb-PTH-drl_map.gbr  main_pcb-PTH.drl  main_pcb-job.gbrjob
images/: .$firmware.layout.bkp  firmware.layout  free_body_pitch  rusty_quad_diagram.drawio
software/: README.md
software/ESP32_data_gathering_firmware/lib/wifi_credentials/: wifi_credentials_copy.h
software/ESP32_data_gathering_firmware/src/: main.cpp
software/ESP32_data_gathering_firmware/src/board/: definitions.h  quad_v01.h
software/ESP32_data_gathering_firmware/src/control/: controllers.h
software/ESP32_data_gathering_firmware/src/easy/: easyFlight.h
software/ESP32_data_gathering_firmware/src/esc/: dshot.h
software/ESP32_data_gathering_firmware/src/health/: power.cpp  power.h  sanityCheck.cpp
software/ESP32_data_gathering_firmware/src/module/: dataStructures.h
software/ESP32_data_gathering_firmware/src/sensor/: imu.h
software/ESP32_data_gathering_firmware/src/sensor/imu/MPU6050/: mpu6050.h
software/ESP32_data_gathering_firmware/src/sigproc/: complementary.h  sigProc.cpp  sigProc.h
software/ESP32_firmware/lib/DShotRMT/: DShotRMT.cpp
software/ESP32_firmware/src/: DShotRMT.cpp  main.cpp
software/ESP32_flight_firmware/: .gitignore  platformio.ini
software/ESP32_flight_firmware/lib/DShotRMT/: DShotRMT.cpp  DShotRMT.h
software/ESP32_flight_firmware/lib/MPU6050/: MPU6050.cpp
software/ESP32_flight_firmware/lib/navigatorV1/: navigatorV1.h
software/ESP32_flight_firmware/lib/sigProc/: sigProc.cpp  sigProc.h
software/ESP32_flight_firmware/src/: boards.h  config_sanity.h  configuration.h  controllers.h  dataStructures.h  includes.h  main.cpp  main_2.cpp  main_deprecated.cpp  main_x.cpp  sanityCheck.cpp  sanityCheck.h
software/ESP32_flight_firmware/src/actuator/: actuator.h  dshot.h
software/ESP32_flight_firmware/src/board/: definitions.h  quad_v00.h  quad_v01.h
software/ESP32_flight_firmware/src/com/: commander.h  wifi.cpp  wifi.h
software/ESP32_flight_firmware/src/control/: controllers.h
software/ESP32_flight_firmware/src/health/: power.cpp  power.h  sanityCheck.h
software/ESP32_flight_firmware/src/module/: dataStructures.h  functions.h  helper_3dmath.h
software/ESP32_flight_firmware/src/sensor/gps/: gps.h  setupGPS.cpp  setupGPS.h  ublox_gps.cpp  ublox_gps.h
software/ESP32_flight_firmware/src/sensor/imu/: imu.cpp  imu.h
software/ESP32_flight_firmware/src/sensor/imu/MPU6050/: mpu6050.h
software/ESP32_flight_firmware/src/sigproc/: complementary.cpp  complementary.h  kalman.cpp  kalman.h  sigProc.cpp  sigProc.h
software/ESP32_ground_firmware/: .gitignore
software/ESP32_ground_firmware/lib/DShotRMT/: DShotRMT.h
software/ESP32_ground_firmware/lib/sigProc/: sigProc.cpp  sigProc.h
software/ESP32_ground_firmware/src/: main.cpp
software/ESP32_thrust_step_firmware/lib/sigProc/: sigProc.h
software/ESP32_thrust_step_firmware/src/: main.cpp
software/Python groud software/: UDP transmit.py
software/misc-tools/: KalmanFilter.py  KalmanTest2D copy.py  TCP_strain_guage.py  roll_stability_test.ipynb
software/misc_tools/: KalmanFilter.py  KalmanTest.py  KalmanTest2D.py  Quaternion.py  controllers.py  kalman.py  kalman_initial_test.ipynb  kalman_python.ipynb  octave-workspace  plotting_thrust_increaser.asv  plotting_thrust_increaser.m  plotting_thrust_steps.m  roll_angle_simulink.slx  roll_moment_inertia.m  roll_stability_test.ipynb  roll_stability_test0.m  roll_stability_test1.asv  roll_stability_test1.m
software/rusty-quad/: Cargo.toml  Embed.toml
software/rusty-quad/src/: functions.rs  main.rs  sbus_cmd.rs  signals.rs  task_PROTOTYPE.rs  task_attitude_controller.rs  task_blinker.rs  task_commander.rs  task_control_loop.rs  task_flight_detector.rs  task_imu_reader.rs  task_motor_governor.rs  task_motor_mixing.rs  task_sbus_reader.rs  task_state_estimator.rs
software/rusty-quad/src/imu/: imu_variants.rs  mod.rs
software/rusty-quad/src/imu/imu_variants/: icm20948_async.rs
tests/: 0500_thrust_response.csv  1200_thrust_response.csv  1500_thrust_response.csv  MPU6050_noise.csv  README.md  inertia_right_point.csv  kalman_fastdrive.csv  kalman_linear_drive.csv  kalman_parkinlot_drive1.csv  kalman_parkinlot_drive2.csv
tests/inertia_meas/: pitch_inertia_left_point.csv  pitch_inertia_right_point.csv  roll_moment_inertia.jl  roll_moment_inertia.m
tests/thrust_response/: increasing_thrust_response.csv  plotting_thrust_increaser.jl  plotting_thrust_increaser.m  plotting_thrust_steps.jl  plotting_thrust_steps.m
utilities/: data_structures.jl  udp_plotter.jl
